# calculator-math

./: .clang-format  CMakeLists.txt
include/calculator_math/: calculator_math.h
